fix dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,11 @@ html,
 main,
 body {
   background-color: #faf9f6;
-  height: 100%;
+  /* height: 100%; */
 }
 
 .app {
-  height: 100%;
+  /* height: 100%; */
 }
 
 .wrapper {
